--- a/app/gif_test.html
+++ b/app/gif_test.html
@@ -9,7 +9,7 @@
 
 <script src="./js/libs/freezeframe.min.js"></script>
 
-<script src="./js/gif_player.js"></script>
+<script src="./js/gif_player.js"></script>gifテスト
 
 
 </head>
