--- a/app/gif_test.html
+++ b/app/gif_test.html
@@ -6,11 +6,10 @@
 <link href="./style
 <link href="./styles/style.css" rel="stylesheet" type="text/css">
 
-
+<!--アニメーションgifの再生と停止をコントロールするライブラリ -->
 <script src="./js/libs/freezeframe.min.js"></script>
-
-<script src="./js/gif_player.js"></script>gifテスト
-
+<!--再生関連-->
+<script src="./js/gif_player.js"></script>
 
 </head>
 <body>
@@ -24,7 +23,4 @@
 <!--
 
 Freezeframe.jsではアニメーションgifの最初のフレームだけをcanvasに書き込み、gifの静止画バージョンを自動作成します。あとは、この静止画バージョンとアニメーションgifをトリガーで切り替え、アニメーションgifを再生・停止させます。
-下記は、ホバーでアニメーションgifを再生・停止します。
-
-
 -->
