gifのファイル名変えててgif_test.htmlが泣いていた

--- a/app/gif_test.html
+++ b/app/gif_test.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 
-<img class="freezeframe" src="images/osiri.gif"> 
+<img class="freezeframe" src="images/gif1.gif"> 
 　
 
 </body>
