--- a/app/gif_test.html
+++ b/app/gif_test.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-<title>snowみたいなアプリ</title>
+<title>gifのテスト</title>
 <meta charset="utf-8">
 <link href="./style
 <link href="./styles/style.css" rel="stylesheet" type="text/css">
@@ -14,7 +14,7 @@
 </head>
 <body>
 
-<img class="freezeframe" src="images/gif1.gif"> 
+<img class="freezeframe" src="images/gif1.gif">
 　
 
 </body>
