--- a/app/like_snow.html
+++ b/app/like_snow.html
@@ -14,7 +14,7 @@
 	<script src="../build/clmtrackr.js"></script>
 	<script src="./js/libs/Stats.js"></script>
 	<div id="content">
-		<h2>Snowみたいなアプリ(startボタンで開始)</h2>
+		<h2>1Snowみたいなアプリ(startボタンで開始)</h2>
 		<div id="container">
 			<video id="videoel" width="800" height="600" preload="auto" loop playsinline autoplay>
 			</video>
