--- a/app/like_snow.html
+++ b/app/like_snow.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-	<title>snowみたいなアプリ</title>
+	<title>snowのパクり</title>
 	<meta charset="utf-8">
 	<link href="./styles/bootstrap.min.css" rel="stylesheet" type="text/css">
 	<link href="./styles/style.css" rel="stylesheet" type="text/css">
@@ -14,7 +14,7 @@
 	<script src="../build/clmtrackr.js"></script>
 	<script src="./js/libs/Stats.js"></script>
 	<div id="content">
-		<h2>Snowみたいなアプリ(startボタンで開始)</h2>
+		<h2>Snowのパクり(startボタンで開始)</h2>
 		<div id="container">
 			<video id="videoel" width="800" height="600" preload="auto" loop playsinline autoplay>
 			</video>
